# LatropEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  ship_game.py
LatropGraphics/: CMakeLists.txt
LatropGraphics/src/: LRenderer.cpp  LRenderer.h  Primitives.h
LatropGraphics/src/shaders/: genericFrag.frag  genericInstancedVert.vert  genericVert.vert
LatropPhysics/: .gitignore  CMakeLists.txt  LICENSE
LatropPhysics/Sources/: Sphere.h
LatropPhysics/include/: CollisionDetection.h  Shapes.h
LatropPhysics/include/collision/: AABBCollider.h  BoundedPlaneCollider.h  CapsuleCollider.h  Collider.h  CollisionBody.h  CollisionPoints.h  CollisionWorld.h  OBBCollider.h  PlaneCollider.h  Solver.h  SphereCollider.h
LatropPhysics/include/collision/algorithms/: CollisionDetection.h
LatropPhysics/include/dynamics/: BasicSolver.h  DynamicsWorld.h  ImpulseSolver.h  Material.h  PositionSolver.h  RigidBody.h  RotationaImpulseSolver.h  RotationalImpulseSolver.h  SmoothPositionSolver.h
LatropPhysics/include/shared/: Transform.h
LatropPhysics/src/: CollisionDetection.cpp
LatropPhysics/src/collision/: AABBCollider.cpp  BoundedPlaneCollider.cpp  CapsuleCollider.cpp  CollisionWorld.cpp  OBBCollider.cpp  PlaneCollider.cpp  SphereCollider.cpp
LatropPhysics/src/collision/algorithms/: CollisionDetection.cpp
LatropPhysics/src/dynamics/: BasicSolver.cpp  DynamicsWorld.cpp  ImpulseSolver.cpp  Material.cpp  PositionSolver.cpp  RotationaImpulseSolver.cpp  RotationalImpulseSolver.cpp  SmoothPositionSolver.cpp
LatropPhysics/tests/: AABBColliderTests.cpp  CapsulePlaneTests.cpp  MixedCollisionsTests.cpp  OBBColliderTests.cpp  Utilities.h
include/: LEngine.h  LPlayerCharacter.h  TraceableDynamicsWorld.h
include/scenes/: OriginalScene.h  PortalsSandbox.h  RoomScene.h  RotationalScene.h  Shared.h
scripts/: move_textures.py  ship_game.py
sources/engine/include/: LActor.h  LPlayerCharacter.h
sources/engine/include/scenes/: PortalsSandbox.h  RotationalScene.h  Shared.h
sources/engine/src/: LActor.cpp  LEngine.cpp  LPlayerCharacter.cpp
sources/engine/src/scenes/: OriginalScene.cpp  PortalsSandbox.cpp  RoomScene.cpp  RotationalScene.cpp  Shared.cpp
sources/game/src/: main.cpp
sources/graphics/include/: LRenderer.h  Primitives.h  TextRenderer.h  globals.h
sources/graphics/src/: LRenderer.cpp  Primitives.cpp  TextRenderer.cpp
sources/physics/include/collision/: BoundedPlaneCollider.h  CollisionWorld.h
sources/physics/include/dynamics/: Material.h  PositionSolver.h  SmoothPositionSolver.h
sources/physics/include/shared/: AABB.h
sources/physics/src/collision/: CollisionWorld.cpp
sources/physics/src/dynamics/: Material.cpp  RotationalImpulseSolver.cpp
src/: LActor.cpp  LActor.h  LCore.cpp  LCore.h  LEngine.cpp  LEngine.h  LPlayerCharacter.cpp  LPlayerCharacter.h  LTickable.h  TraceableDynamicsWorld.h  main.cpp
src/scenes/: OriginalScene.cpp  PortalsSandbox.cpp  RoomScene.cpp  RotationalScene.cpp  Shared.cpp
